fixed nav bar - dropdown (z-index)

--- a/app/assets/stylesheets/_nav_bar.scss
+++ b/app/assets/stylesheets/_nav_bar.scss
@@ -54,7 +54,7 @@
     background-color: $dark-maple;
     min-width: 160px;
     // box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 2;
   }
   
   //Links inside the dropdown - N/A for me?
